Fix manifest again

--- a/wine.yml
+++ b/wine.yml
@@ -97,10 +97,9 @@ modules:
       - type: patch
         paths:
           - patches/wine/loader-prefer-winedllpath.patch
-            #- type: shell
-            #commands:
-            #- staging/patchinstall.py --destdir=. --all
-            #disabled until next staging
+      - type: shell
+        commands:
+          - staging/patchinstall.py --destdir=. --all
             #- type: patch
             #paths:
             #- patches/wine/childwindow.patch
