Add mousepatch back in

--- a/wine.yml
+++ b/wine.yml
@@ -102,9 +102,9 @@ modules:
       - type: patch
         paths:
           - patches/wine/segregrevert.patch
-            #      - type: patch
-            #        paths:
-            #          - patches/wine/mouselock.patch
+      - type: patch
+        paths:
+          - patches/wine/mouselock.patch
       - type: patch
         paths:
           - patches/wine/loader-prefer-winedllpath.patch
