--- a/org.vinegarhq.Vinegar.yml
+++ b/org.vinegarhq.Vinegar.yml
@@ -104,4 +104,5 @@ modules:
       - install -Dm755 data/gamemoderun -t /app/bin
     sources: *gamemode-sources
   
-  - wine.yml
+      #  - wine.yml
+      #  disabled till i can get wtf is going on with appstream
