--- a/wine.yml
+++ b/wine.yml
@@ -16,6 +16,14 @@ modules:
           timestamp-query: .published_at
           url-query: .assets[] | select(.name=="libusb-\($version).tar.bz2") | .browser_download_url
 
+  - name: libdrm
+    buildsystem: meson
+    sources:
+      - type: git
+        url: https://gitlab.freedesktop.org/mesa/drm.git
+        tag: libdrm-2.4.124
+        commit: 38ec7dbd4df3141441afafe5ac62dfc9df36a77e
+
   - name: wine
     post-install:
       - ln -s /app/bin/wine64 /app/bin/wine
